fixes + all wrapped up

--- a/project2/styles.css
+++ b/project2/styles.css
@@ -49,6 +49,7 @@ h2 {
     color: #223b12;
     font-family: "Notos Sans JP", sans-serif;
     font-weight: 700;
+    margin-bottom: 10px;
 }
 
 .subhead {
@@ -75,6 +76,7 @@ h4 {
     font-size: 22px;
     font-family: "Notos Sans JP", sans-serif;
     font-weight: 700;
+    margin-top: 0px;
 }
 
 p {
